--- a/PhaseTwo/DOM/PracticeExample/styles.css
+++ b/PhaseTwo/DOM/PracticeExample/styles.css
@@ -22,3 +22,13 @@ li {
     padding: 1em;
     list-style: none;
 }
+
+#imagegallery {
+    list-style: none;
+}
+#imagegallery li {
+    display: inline;
+}
+#imagegallery li a img {
+    border: 0;
+}
